fix mobile wrapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,12 @@ body {
 
 .btn {
   margin: 0 .2rem;
+  white-space: nowrap;
+}
+
+#team-select-main {
+  padding: 0;
+  margin: 0;
 }
 
 #team-select-bar {
@@ -70,15 +76,21 @@ body {
 #team-history-buttons {
   background-color: #fff;
   justify-content: center;
+  display: flex;
 }
 
-#team-select-main, #team-select-menu {
-  padding: 0;
+#team-select-menu {
+  display: flex;
   margin: 0;
+  padding: 0;
 }
 
 #team-select-control {
   color: #464D57;
+  background: url('../images/caret-down.svg');
+  background-size: 10px 10px;
+  background-repeat: no-repeat;
+  background-position: right 10px center;
 }
 
 #team-select-ul {
@@ -103,6 +115,10 @@ body {
   border-bottom-width: 0.5px;
 }
 
+#team-select-control li {
+  background-color: transparent;
+}
+
 #team-select-ul.down {
   display: block;
   position: absolute;
@@ -110,9 +126,10 @@ body {
   z-index: 999;
 }
 
-#team-select-ul .collection-item {
-  padding: 10px;
+#team-select-control .collection-item, .collection-item {
+  padding: 10px 30px 10px 10px;
   display: list-item;
+  white-space: nowrap;
 }
 
 #team-select-ul .collection-item:hover {
@@ -198,9 +215,9 @@ body {
   margin-top: 10%;
 }
 
-@media screen and (min-width: 510px) {
+@media screen and (min-width: 641px) {
   .game-overview-card {
-    margin: 1rem 1rem;
+    margin: 1rem 0.7vw;
   }
 
   #team-select-bar {
